# flask-SQLAlchemy-app

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
models/: contacts.py
routes/: contacts.py
templates/: about.html  index.html  layout.html  update.html
utils/: db.py
